--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 .square{
 	width:10px;
 	height:10px;
-	 background-color: rgb(43, 33, 33);
-        border: px solid rgb(75, 74, 74);
+	  background-color: rgb(29, 29, 29); 
+      border: 1px solid rgb(75, 74, 74);
       transition: background-color 0.5s ease;
 }
 .container{
